--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@adiwajshing/baileys": "^5.0.0",
+    "@adiwajshing/baileys": "github:WhiskeySockets/Baileys",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@hapi/boom": "^9.1.4",
@@ -35,8 +35,8 @@
     "file-type": "^17.1.1",
     "gn-api-sdk-typescript": "^1.0.7",
     "http-graceful-shutdown": "^3.1.6",
-    "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.4",
+    "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "mustache": "^4.2.0",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.8.0",
@@ -46,10 +46,10 @@
     "puppeteer": "^19.4.0",
     "qrcode-terminal": "^0.12.0",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^5.22.3",
+    "sequelize": "^6.31.0",
     "sequelize-cli": "^5.5.1",
-    "sequelize-typescript": "^1.1.0",
-    "socket.io": "^3.0.5",
+    "sequelize-typescript": "^2.1.5",
+    "socket.io": "^4.6.1",
     "uuid": "^8.3.2",
     "xlsx": "^0.18.3",
     "yup": "^0.32.11"
@@ -87,6 +87,6 @@
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.2.4"
+    "typescript": "^4.6.3"
   }
 }
